Wagner fix Riot

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -3302,8 +3302,8 @@
 
  russia_wagner.20.t: "March of Justice"
  russia_wagner.20.d: "Unexpectedly for us, our famous owner of the Wagner PMCs announced the start of a march of justice against corrupt officials and generals. His troops have already occupied Rostov on the Don and plan to move to Moscow."
- russia_wagner.20.a: "This Was Not Enough For Us"
- russia_wagner.20.b: "Thank you Lukashenko"
+ russia_wagner.20.a: "Let's Finish the Summer and Crossbows"
+ russia_wagner.20.b: "Lukashenko Save Us"
 
  russia_wagner.21.t: "Wagner PMCs have occupied Rostov on the Don"
  russia_wagner.21.d: "Wagner PMC units have arrived in Rostov on the Don, and now we can begin the march on Moscow. Traitors will pay for all the senseless deaths of men and shells!"
