--- a/localisation/english/MD_focus_WAG_l_english.yml
+++ b/localisation/english/MD_focus_WAG_l_english.yml
@@ -102,6 +102,8 @@
  WAG_Begin_the_assault_on_Moscow_desc: "The time has come"
  WAG_moa: "Recruit MLA Battalions"
  WAG_moa_desc: "The Malorossiya army will become our ally"
+ WAG_done_with_pipa: "Peace Proposal"
+ WAG_done_with_pipa_desc: "The capture of Moscow gives us a trump card in the negotiations, perhaps we can complete our march"
  #Wagner Country Sahel Confederation Focuses
  WAG_africa_start: "Sahel Confederation"
  WAG_africa_start_desc: "The time has come to unite the Sahel countries under their rule and fight back against the enemies"
@@ -168,6 +170,19 @@
  russia_March_of_Justice.3.t: "Clashes With The Russian Army"
  russia_March_of_Justice.3.d: "The first serious clashes between the Russian Army and the Wagner PMCs began, the first victims were fighter pilots of the Russian Armed Forces, who were shot down by fighters of the Wagner PMCs"
  russia_March_of_Justice.3.o1: "Interesting"
+ russia_March_of_Justice.4.t: "The Fall of Moscow"
+ russia_March_of_Justice.4.d: "PMCs Wagner announced the capture of Moscow. Prigozhin offers to end the bloodshed and sit down at the negotiating table and accept the surrender"
+ russia_March_of_Justice.4.o1: "We Surrender"
+ russia_March_of_Justice.4.o2: "Never"
+ russia_March_of_Justice.5.t: "Our Victory"
+ russia_March_of_Justice.5.d: "The Russian government has accepted the surrender, we have won!"
+ russia_March_of_Justice.5.o1: "Uraaaaaaa!"
+ russia_March_of_Justice.6.t: "Battle Continues"
+ russia_March_of_Justice.6.d: "The Russian government refused our offer, they decided to fight to the end"
+ russia_March_of_Justice.6.o1: "We Will Win"
+ russia_March_of_Justice.7.t: "The March Is Over"
+ russia_March_of_Justice.7.d: "We have won! Russia is now under the rule of true patriots!"
+ russia_March_of_Justice.7.o1: "Uraaaaaaa!"
 
  RUS_WAG_Bunt_modifer: "The Wagner PMCs Riot"
  WAG_Bunt_modifer: "The Wagner PMCs Riot"
