Add game rule for Germany

--- a/localisation/english/replace/replaced_from_game_rules_l_english.yml
+++ b/localisation/english/replace/replaced_from_game_rules_l_english.yml
@@ -61,3 +61,4 @@
  RULE_ALLOW_LEND_LEASE_SAME_IDEOLOGY_DESC: "Countries may only lend-lease equipment to countries of the same ruling ideology."
  RULE_ALLOW_LEND_LEASE_SAME_FACTION_DESC: "Countries may only lend-lease equipment to countries in the same faction."
  RULE_ALLOW_LEND_LEASE_BLOCKED_DESC: "Countries may never lend-lease equipment to any other country."
+ CHI_AI_BEHAVIOR: "@CHI People's Republic of China"
