--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -220,7 +220,7 @@
  BLR_restalinization: "重新斯大林化"
  BLR_restalinization_desc: "俄罗斯应该再次向斯大林致敬，因为他在建设社会主义和将人类文明从欧洲法西斯瘟疫中拯救出来方面发挥的作用。今天，斯大林时代的伟大甚至对他最愤怒的仇恨者来说也是不言而喻的。我们将解放整个世界！"
  BLR_single_party: "一党制"
- BLR_single_party_desc: "白罗俄斯共产党在所有与国家相关的领域都最为精通。如果别人让开，我们可以开始建设真正的共产主义乌托邦，而这一次，我们将成功。"
+ BLR_single_party_desc: "白俄罗斯共产党在所有与国家相关的领域都最为精通。如果其他人不妨碍我们，我们就可以致力于建设一个真正的共产主义乌托邦，而这一次，我们将会成功。"
  BLR_nationalize_foreign_business: "对外贸易国有化"
  BLR_nationalize_foreign_business_desc: "外国人拥有的工厂永远是一个经济隐患。由于外国对我们的经济制裁，工业主们夜以继日地离开并带走他们工厂的重要部分始终是一个威胁。为了避免这种情况发生，我们必须为国家宣称这些工厂——即使这冒犯了外国。"
  BLR_five_year_plan: "第一个五年计划"
@@ -624,7 +624,7 @@
  BLR_Pazniak_desc: "民族主义势力夺取了该国的政权。他们将把白俄罗斯带向何方？走向更光明的未来还是国家的崩溃？"
  BLR_patriotism_desc: "是时候在我国培养爱国主义教育了。"
  BLR_Belarusisation: "白俄罗斯化"
- BLR_Belarusisation_desc: "所有文献，所有头衔都必须是白俄罗斯语"
+ BLR_Belarusisation_desc: "所有文献，所有标题都必须用白俄罗斯语"
  BLR_glory_Belarus: "白俄罗斯万岁"
  BLR_glory_Belarus_desc: "我们的国家是伟大的，我们的国家有很长的历史，每个公民都应该为身为白俄罗斯人而感到骄傲"
  BLR_Democratic_clean: "清洗民主派"
@@ -2277,3 +2277,5 @@
  BLR_sobor: "白俄罗斯斯拉夫教会"
  BLR_rne: "俄罗斯民族团结"
  BLR_increased_social_spending_idea: "增加社会支持"
+ BLR_Belshina: "JSC比卓拿"
+ BLR_Belshina_desc: "JSC比卓拿是一家汽车轮胎制造商。它生产乘用车、卡车、重型车辆、道路施工和起重车辆、电动汽车、公共汽车、拖拉机和农业机械的轮胎。"
