--- a/localisation/simp_chinese/MD_focus_WAG_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_WAG_l_simp_chinese.yml
@@ -155,3 +155,18 @@
  russia_March_of_Justice.1.d: "我们正处于争取正义的转折点，要么现在，要么永远不会。"
  russia_March_of_Justice.1.o1: "我们妥协"
  russia_March_of_Justice.1.o2: "我们到头了"
+ WAG_done_with_pipa: "和平提案"
+ WAG_done_with_pipa_desc: "攻占莫斯科为我们在谈判中提供了一张王牌，也许我们可以完成我们的进军。"
+ russia_March_of_Justice.4.t: "莫斯科陷落"
+ russia_March_of_Justice.4.d: "私人军事公司瓦格纳宣布攻占莫斯科。普里戈任提出结束流血，并在谈判桌上接受投降。"
+ russia_March_of_Justice.4.o1: "我们投降"
+ russia_March_of_Justice.4.o2: "休想"
+ russia_March_of_Justice.5.t: "我们的胜利"
+ russia_March_of_Justice.5.d: "俄罗斯政府接受投降，我们胜利了！"
+ russia_March_of_Justice.5.o1: "万岁！"
+ russia_March_of_Justice.6.t: "战斗继续"
+ russia_March_of_Justice.6.d: "俄罗斯政府拒绝了我们的提议，他们决定战斗到底。"
+ russia_March_of_Justice.6.o1: "我们将取得胜利"
+ russia_March_of_Justice.7.t: "进军结束了"
+ russia_March_of_Justice.7.d: "我们胜利了！俄罗斯现在处于真正的爱国者的统治之下！"
+ russia_March_of_Justice.7.o1: "万岁！"
