--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -90,7 +90,6 @@
  RULE_OPTION_ITA_EAST_DESC: ""
  RULE_OPTION_ITA_NONCOM: "意大利共产主义复兴党"
  RULE_OPTION_ITA_NONCOM_DESC: ""
- PRC_AI_BEHAVIOR: "@CHI 中华人民共和国"
  JAP_AI_BEHAVIOR: "@JAP 日本"
  RULE_OPTION_RED_STAR_OVER_TOKYO: "红星闪耀东京"
  RULE_OPTION_RED_STAR_OVER_TOKYO_AI_DESC: "在过去，日本接受共产主义的未来并非如此不可想象。但在这几年，随着日本实行完全的资本主义经济体系，这种可能性似乎消失了。然而二战后日本经济的奇迹增长现在却已停滞。肆虐的不平等现象使得日本人民开始接受改革现有体系的可能......"
@@ -104,7 +103,7 @@
  SWE_AI_BEHAVIOR: "@SWE 瑞典王国"
  RULE_OPTION_NORTHERN_AMBITION: "北方雄心"
  RULE_OPTION_NORTHERN_AMBITION_AI_DESC: "瑞典极右翼将会在民众中掀起一股意图在北欧建立一个瑞典帝国的浪潮。"
- SYR_AI_BEHAVIOR: "@SYR 叙利亚阿拉伯共和国"
+ SYR_AI_BEHAVIOR: "@SYR 阿拉伯叙利亚共和国"
  RULE_OPTION_SYR_HISTORICAL: "史实AI"
  RULE_OPTION_SYR_HISTORICAL_DESC: "哈菲兹·阿萨德的长子巴沙尔·阿萨德将成功继任。巴沙尔将使叙利亚继续与俄罗斯结盟，并会同样重视外交、军事和经济。"
  RULE_OPTION_SYR_IRON_LADY: "叙利亚铁娘子"
@@ -433,7 +432,7 @@
  RULE_OPTION_BREAKING_HISTORY_AI_DESC: "AI将搞乱2006年的政变，使其不走历史路线。"
  SOO_AI_BEHAVIOR: "@SOO 南奥塞梯"
  RULE_SOO_Scythia: "斯基泰的崛起"
- RULE_SOO_Scythia_ALLOWED_DESC: "南奥塞梯可以有机会创建一个古老的国家——斯基泰。"
+ RULE_SOO_Scythia_ALLOWED_DESC: "南奥塞梯可以有机会创建一个古老的国家 - 斯基泰。"
  RULE_SOO_Scythia_BLOCKED_DESC: "不允许南奥塞梯建立斯基泰国家"
  RULE_OPTION_TAI_PROJECT_NATIONAL_GLORY: "国光计划"
  RULE_OPTION_TAI_PROJECT_NATIONAL_GLORY_AI_DESC: "谨遵先总统 蒋公遗志，反攻大陆，统一中国。"
@@ -553,3 +552,21 @@
  CUB_NATIONALIST_DESC: "民族主义长枪党在古巴掌权。"
  CUB_DEMOCRATS: "民主古巴"
  CUB_DEMOCRATS_DESC: "古巴将选择民主改革的路线。"
+ CHI_AI_BEHAVIOR: "@CHI 中华人民共和国"
+ GER_AI_BEHAVIOR: "@GER 德意志联邦共和国"
+ RULE_OPTION_GER_CONSERVATIVE: "保守主义"
+ RULE_OPTION_GER_CONSERVATIVE_DESC: "德国将努力走保守主义路线。"
+ RULE_OPTION_GER_SOCIAL_DEMOCRATIC: "社会民主主义"
+ RULE_OPTION_GER_SOCIAL_DEMOCRATIC_DESC: "德国将努力走社会民主主义路线。"
+ RULE_OPTION_GER_LIBERALISM: "自由主义"
+ RULE_OPTION_GER_LIBERALISM_DESC: "德国将努力走自由主义路线。"
+ RULE_OPTION_GER_POPULISM: "民粹主义"
+ RULE_OPTION_GER_POPULISM_DESC: "德国将努力走民粹主义路线。"
+ RULE_OPTION_GER_GREEN: "绿党"
+ RULE_OPTION_GER_GREEN_DESC: "德国将努力走环保主义路线。"
+ RULE_OPTION_GER_NATIONALIST: "民族主义"
+ RULE_OPTION_GER_NATIONALIST_DESC: "德国将努力走民族主义路线。"
+ RULE_OPTION_GER_SOCIALIST: "社会主义"
+ RULE_OPTION_GER_SOCIALIST_DESC: "德国将努力走社会主义路线。"
+ RULE_OPTION_GER_MONARCHIST: "君主主义"
+ RULE_OPTION_GER_MONARCHIST_DESC: "德国将努力走君主主义路线。"
