--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -159,18 +159,6 @@
  TAT_tatneft_alg: "提供§Y[ALG.GetNamewithFlag]§!石油合同"
  TAT_tatneft_klm: "提供§Y[KLM.GetNamewithFlag]§!石油合同"
  TAT_tatneft_nee: "提供§Y[NEE.GetNamewithFlag]§!石油合同"
- TAT_nationalism_category: "鞑靼民族主义"
- TAT_nationalism_category_desc: "鞑靼人自苏联时代起就早已拥有自己的国家，为鞑靼人创建了自己的苏维埃社会主义共和国联盟。苏联解体后，俄罗斯当局成功浇灭了鞑靼人成为独立国家的愿望。\n\n支持分裂主义：§Y[?ROOT.subjectinped]§!"
- TAT_start_vidob: "决定鞑靼斯坦的命运"
- TAT_for_russia: "消除与俄罗斯宪法的矛盾"
- TAT_for_russia1: "使法律与俄罗斯的法律一致"
- TAT_for_russia2: "与俄罗斯的区域经济项目一体化"
- TAT_for_russia3: "放弃“共和国总统”的头衔"
- TAT_anti_russia: "修改关于我们国家主权的宪法"
- TAT_anti_russia1: "废除俄罗斯法律的超然性"
- TAT_anti_russia_smi: "在媒体上宣传分裂主义"
- TAT_anti_russia2: "退出俄罗斯经济体系"
- TAT_anti_russia3: "宣布自己是一个主权国家"
  TAT_pro_russ: "亲俄之路"
  TAT_pro_russ_desc: "我们将与俄罗斯同在"
  TAT_anti_russ: "独立之路"
@@ -298,7 +286,7 @@
  TAT_weaken_the_banks_desc: "银行是资本主义的近卫军，扛着资本主义的旗帜投入战斗，用它们的存在来捍卫其利润。他们干涉世界贫困地区，通过工资倾销和利息投机来虐待工人阶级，并通过合法和非法捐款影响政治。银行必须恢复到纯粹是非政治性的短期放债人的状态。"
  TAT_support_of_the_worker: "支持工人"
  TAT_support_of_the_worker_desc: "工人阶级是我们的依靠和力量，我们将永远支持他们反对资本主义蔓延！"
- TAT_ultimate_tax_reform: "大税制改革"
+ TAT_ultimate_tax_reform: "重大税制改革"
  TAT_ultimate_tax_reform_desc: "我们打算进行重大税制改革，这会减轻老百姓的税负，但对企业来说却相反。"
  TAT_single_party: "一党"
  TAT_single_party_desc: "鞑靼斯坦共产党最了解与国家有关的所有领域。如果其他人不妨碍我们，我们就可以致力于建设一个真正的共产主义乌托邦，而这一次，我们将会成功。"
@@ -323,7 +311,7 @@
  TAT_National_science: "国内科学"
  TAT_National_science_desc: "我们将投入资金发展俄罗斯的科学"
  TAT_Tatarisation: "鞑靼化"
- TAT_Tatarisation_desc: "所有文学作品，所有标题都必须使用鞑靼语"
+ TAT_Tatarisation_desc: "所有文献，所有标题都必须使用鞑靼语"
  TAT_anti_lgbt: "禁止宣传不正当关系"
  TAT_anti_lgbt_desc: "我们正在通过一项关于优先考虑和保护家庭、婚姻（男女结合）、母性的法律，以及保护家庭免受意识形态和组织侵犯和干涉家庭事务的法律。此外，还建议通过一项“保护人性”的法律，禁止宣传违背人性的不正当关系。"
  TAT_territorial_reform: "领土改革"
@@ -1024,10 +1012,6 @@
  subject_rus.44.d: ""
  subject_rus.44.a: ""
  bashkiriya_focus: "巴什科尔托斯坦国策树"
- BSH_bashkiria_strong: "与俄罗斯同在"
- BSH_bashkiria_strong_desc: "巴什基尔将永远与俄罗斯在一起。"
- BSH_bashkiria_free: "巴什基尔独立之路"
- BSH_bashkiria_free_desc: "我们将走自己的路"
  BSH_bashkiria_idel_ural: "阿的里-乌拉尔"
  BSH_bashkiria_idel_ural_desc: "我们必须把本地区的其他人民团结在我们周围，只有这样我们才能取得伟大的成就。"
  BSH_bashkiria_idel_ural_inner: "作为俄罗斯一部分的阿的里-乌拉尔"
@@ -1129,8 +1113,8 @@
  BSH_city_desc: "我们将投资改善我们的首都。"
  BSH_science: "巴什基尔科学协会"
  BSH_science_desc: "科学是我们的一切。"
- BSH_free_education: "融入俄语教育"
- BSH_free_education_desc: "我们完全融入俄罗斯教育体系。"
+ BSH_free_education: "免费教育"
+ BSH_free_education_desc: "教育对我们光荣的国家的每个公民来说都是免费的。"
  BSH_scientists: "最聪明的巴什基尔思想"
  BSH_scientists_desc: "我们投资于我们最优秀的人才！"
  BSH_uralsib: "乌拉尔西伯银行"
@@ -1371,33 +1355,9 @@
  BSH_bus_export_kaz: "出口巴士至§Y[KAZ.GetNameWithFlag]§!"
  BSH_bus_export_che: "出口巴士至§Y[CHE.GetNameWithFlag]§!"
  BSH_mtz_create_TT: "§Y涅夫捷卡姆斯克汽车厂的巴士销售§!决议将启用"
- BSH_nationalism_category: "巴什基尔民族主义"
- BSH_nationalism_category_desc: "巴什基尔人民长期拥有自己的国家，自从苏联时期，他们的巴什基尔自治苏维埃社会主义共和国就为巴什基尔人建立。在苏联解体的事件之后，俄罗斯当局设法扑灭了巴什基尔人成为一个独立国家的愿望。"
- BSH_start_vidob: "决定巴什基利亚的命运"
- BSH_for_russia: "消除与俄罗斯宪法的矛盾"
- BSH_for_russia1: "使法律与俄罗斯的法律一致"
- BSH_for_russia2: "与俄罗斯的区域经济项目一体化"
- BSH_for_russia3: "放弃“共和国总统”的头衔"
- BSH_anti_russia: "修改关于我们国家主权的宪法"
- BSH_anti_russia1: "废除俄罗斯法律的超然性"
- BSH_anti_russia2: "退出俄罗斯经济体系"
- BSH_anti_russia3: "宣布自己是一个主权国家"
- SUB_bashkirya_gui_TT: "§H巴什基利亚§!"
  BSH_reform_railway: "运输改革"
  BSH_eternal_reform: "永无止境的交通改革"
  BSH_eternal_reform_desc: "尽管交通改革的呼声很高，但现任政府仍然无法完成这些改革。人们长期以来一直在开玩笑说永无止境的交通改革，他们有一席之地。"
- BSH_ufa_modifier: "首都发展 - 乌法"
- BSH_ufa_modifier_desc: "由于我们是一个小共和国，首都的发展对我们来说是一个决定因素，因为首都是整个共和国经济的引擎。"
- BSH_ufa_modifier_tt_intro: "§Y$BSH_ufa_modifier$§!追加效果："
- BSH_ufa_start_tt: "添加§Y$BSH_ufa_modifier$§!，其效果为 £political_power_texticon 政治点数获取: §G+1.00%§!\n\n"
- BSH_ufa_modifier1_tt: "$BSH_ufa_modifier_tt_intro$\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§G+1.00%§!\n\n"
- BSH_ufa_modifier2_tt: "$BSH_ufa_modifier_tt_intro$\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§G+2.00%§!\n\n"
- BSH_ufa_modifier3_tt: "$BSH_ufa_modifier_tt_intro$\n£resources_texticon 资源获取效率：§G+15.00%§! \n石油：§G+2§! \n\n"
- BSH_ufa_modifier4_tt: "$BSH_ufa_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+4.00%§! \n£health_budget_cost_factor_texticon 健保开支变更花费：§R+5.00%§! \n\n"
- BSH_ufa_modifier5_tt: "$BSH_ufa_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+5.00%§! \n£health_budget_cost_factor_texticon 健保开支变更花费：§R+8.00%§! \n\n"
- BSH_ufa_modifier6_tt: "$BSH_ufa_modifier_tt_intro$\n£corporate_tax_income_multiplier_modifier_texticon §Y企业税收§!乘数：§G+2.00%§! \n\n"
- BSH_ufa_modifier7_tt: "$BSH_ufa_modifier_tt_intro$\n£corporate_tax_income_multiplier_modifier_texticon §Y企业税收§!乘数：§G+1.00%§! \n\n"
- BSH_ufa_modifier8_tt: "$BSH_ufa_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+1.00%§! \n\n"
  BSH_military_focus: "注重军事"
  BSH_military_focus_desc: "国家已将其大部分可用资源集中用于军事建设和生产。"
  BSH_civilian_focus: "注重民生"
@@ -1756,3 +1716,207 @@
  SOV_added_kharkivz1: "§Y整合§!§Y[HPR.GetFlag]哈尔科夫§!防务关注"
  SOV_invest_in_ukraine_republic: "接收§Y[SOV.GetFlag]俄罗斯§!投资"
  SOV_rosbanks_in_ukraine_republic: "让§Y[SOV.GetFlag]俄罗斯§!银行进来"
+ SUB_nationalism_category: "共和国的分离主义"
+ SUB_nationalism_category_desc: "我们的国家最近才获得了主权意识，苏联的解体给了我们一个获得自由的机会，但我们拒绝了。现在我们有了第二次机会，但必须坚定而明确地自己决定我们是支持俄罗斯还是不支持俄罗斯。\n\n对我国分离主义的支持：§Y[?ROOT.subjectinped]§!"
+ SUB_anti_russia: "宣布自己为 §Y主权国家§!"
+ TAT_power_to_the_workers: "投资工人阶级"
+ TAT_power_to_the_workers_desc: "我们将重点关注工人阶级，他们将是我们经济增长的引擎。"
+ TAT_authoritarian_control_over_economy: "威权主义对经济的控制"
+ TAT_authoritarian_control_over_economy_desc: "我们国家的经济领域曾任凭机遇，但现在我们将把它重新置于强有力的领导人的控制之下。"
+ TAT_create_patrioitc_schools: "创建爱国学校"
+ TAT_create_patrioitc_schools_desc: "爱国主义学校将帮助我们增加对青少年的影响，并保持共产党的执政。"
+ TAT_the_peoples_militias: "人民民兵"
+ TAT_the_peoples_militias_desc: "为人民组建资金充足的民兵组织可以确保军队在任何冲突中都有足够的支持。"
+ TAT_red_army: "鞑靼红军"
+ TAT_red_army_desc: "我们将创建我们自己的红军，带领我们投入战斗，捍卫社会主义的成就和成功。"
+ TAT_rebuild_roads: "道路维修投资"
+ TAT_rebuild_roads_desc: ""
+ TAT_rebuild_national: "扶持本国工业"
+ TAT_rebuild_national_desc: ""
+ TAT_militarisation: "共和国军事化"
+ TAT_militarisation_desc: ""
+ TAT_territorial_defence: "建立领土防御"
+ TAT_territorial_defence_desc: ""
+ TAT_arms_force: "鞑靼武装部队"
+ TAT_arms_force_desc: ""
+ TAT_ground_force: "鞑靼地面部队"
+ TAT_ground_force_desc: ""
+ TAT_air_force: "鞑靼航空航天部队"
+ TAT_air_force_desc: ""
+ TAT_special_force: "鞑靼特种作战部队"
+ TAT_special_force_desc: ""
+ TAT_military_state_idea: "共和国军事化"
+ TAT_highways_repairing: "道路维修"
+ TAT_ter_orobona: "领土防御"
+ TAT_special_forces: "鞑靼武装部队"
+ TAT_new_workplace: "新工作场所"
+ TAT_control_economic_idea: "受控经济"
+ TAT_ministerstva: "鞑靼斯坦各部"
+ TAT_react_start_ministerstva: "发展部委"
+ TAT_react_start_ministerstva_desc: ""
+ TAT_react_zdravo_ministerstva: "卫生部"
+ TAT_react_zdravo_ministerstva_desc: ""
+ TAT_react_economic_ministerstva: "经济部"
+ TAT_react_economic_ministerstva_desc: ""
+ TAT_react_selhoz_ministerstva: "农业部"
+ TAT_react_selhoz_ministerstva_desc: ""
+ BSH_nati_start: "巴什基尔民族主义"
+ BSH_nati_start_desc: "民族主义势力夺取了该国的政权。他们将把巴什科尔托斯坦引向何方？走向更光明的未来还是国家的崩溃？"
+ BSH_socialochka: "增加社会支出"
+ BSH_socialochka_desc: "为了成功提高出生率，我们必须为公民创造更好的条件。应增加社会支出。"
+ BSH_rojdaemost: "出生率宣传"
+ BSH_rojdaemost_desc: "我国正在经历人口下降，所以我们必须提高年轻家庭的出生率。"
+ BSH_debur: "去官僚化"
+ BSH_debur_desc: "压缩官员开支、减少人员，释放的资金造福人民。"
+ BSH_rebuild_roads: "道路维修投资"
+ BSH_rebuild_roads_desc: ""
+ BSH_patriotism: "爱国主义"
+ BSH_patriotism_desc: "是时候动员我们的居民保卫祖国了。"
+ BSH_rebuild_national: "扶持本国工业"
+ BSH_rebuild_national_desc: ""
+ BSH_valute: "我们自己的货币"
+ BSH_valute_desc: "我们将开始在金融周转中转换为我们自己的货币。"
+ BSH_National_science: "国内科学"
+ BSH_National_science_desc: "我们将投入资金发展俄罗斯的科学"
+ BSH_Tatarisation: "巴什基尔化"
+ BSH_Tatarisation_desc: "所有文献，所有标题都必须用巴什基尔语"
+ BSH_anti_lgbt: "禁止宣传不正当关系"
+ BSH_anti_lgbt_desc: "我们正在通过一项关于优先考虑和保护家庭、婚姻（男女结合）、母性的法律，以及保护家庭免受意识形态和组织侵犯和干涉家庭事务的法律。此外，还建议通过一项“保护人性”的法律，禁止宣传违背人性的不正当关系。"
+ BSH_territorial_reform: "领土改革"
+ BSH_territorial_reform_desc: "我们将改变我们共和国的领土结构。"
+ BSH_militarisation: "共和国军事化"
+ BSH_militarisation_desc: ""
+ BSH_territorial_defence: "建立国土防卫"
+ BSH_territorial_defence_desc: ""
+ BSH_Sovereign_Internet: "互联网主权"
+ BSH_Sovereign_Internet_desc: "我们必须让我们的互联网空间完全独立于其他国家，这样他们就无法影响我们的公民。"
+ BSH_Democratic_clean: "清洗民主党人"
+ BSH_Democratic_clean_desc: "我们不会成为西方的仆人。是时候清除我们国家的民主党人了。"
+ BSH_Communistst_clean: "清洗共产党人"
+ BSH_Communistst_clean_desc: "苏联的遗产必须被摧毁。是时候赶走这些红色传染病的追随者了。"
+ BSH_Anti_corruption_law: "反腐败法"
+ BSH_Anti_corruption_law_desc: "我们将打击一切形式的腐败"
+ BSH_anti_immigration_policies: "反移民政策"
+ BSH_anti_immigration_policies_desc: "实施更多的反移民政策将使巴什基尔人的身份保持活力。"
+ BSH_decolectivisation: "去集体化"
+ BSH_decolectivisation_desc: "现在是摆脱苏联遗产并帮助人们迁移到城市的时候了。"
+ BSH_tatar_past: "鞑靼人的过去"
+ BSH_tatar_past_desc: "历史无法改变，我们也知道这一点。我们是喀山汗国的伟大继承人。"
+ BSH_constitution_return: "回归第一部巴什基尔宪法"
+ BSH_constitution_return_desc: "是时候恢复我们国家的正常宪法了。"
+ BSH_true_political_and_national_freedom: "真正的政治自由"
+ BSH_true_political_and_national_freedom_desc: "真正的政治自由的开始是从我们国内清洗期间发生的破坏中恢复过来。现在是向前迈进并实现我们人民真正渴望的时候了。"
+ BSH_tatarin_nati_modifier: "巴什科尔托斯坦国家政策"
+ BSH_tatarin_nati_modifier_desc: "巴什基尔斯坦民族主义势力的崛起极大地影响了其国内外政策。首要任务是国家的权力和力量，宣传伟大的过去和复仇主义，以恢复巴什基尔人的伟大。"
+ BSH_tatarin_nati_modifier_tt_intro: "§Y$BSH_tatarin_nati_modifier$§!追加效果："
+ BSH_tatarin_nati_start_tt: "添加§Y$BSH_tatarin_nati_modifier$§!，其效果为 £political_power_texticon 政治点数获取: §G+1.00%§!\n\n"
+ BSH_tatarin_nati1_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£nationalist_outlook_campaign_cost_modifier_texticon 每日民族主义新增支持率：§G+0.05%§! \n£stability_texticon 稳定度：§R-3.00%§!\n\n"
+ BSH_tatarin_nati2_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£nationalist_outlook_campaign_cost_modifier_texticon 每日民族主义新增支持率：§G+0.03%§!\n\n"
+ BSH_tatarin_nati3_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§R-0.02%§!\n\n"
+ BSH_tatarin_nati4_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£stability_texticon 稳定度：§G+4.00%§! \n£bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数：§R+5.00%§!\n\n"
+ BSH_tatarin_nati5_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£drift_defence_texticon 意识形态变化防御：§G+10.00%§! \n\n"
+ BSH_tatarin_nati6_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£drift_defence_texticon 意识形态变化防御：§G+10.00%§! \n\n"
+ BSH_tatarin_nati7_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£attack_texticon 部队攻击：§G+5.00%§! \n£defence_texticon 部队防御：§G+5.00%§! \n\n"
+ BSH_tatarin_nati8_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§G+5.00%§!\n\n"
+ BSH_tatarin_nati9_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+4.00%§!\n\n"
+ BSH_tatarin_nati10_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£population_texticon 每月人口增长：§G+5.00%§!\n\n"
+ BSH_tatarin_nati11_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率：§R-5.00%§!\n\n"
+ BSH_tatarin_nati12_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n £foreign_influence_defense_modifier_texticon §Y抵御外国影响§!乘数：§G+5.00%§! \n £drift_defence_texticon  意识形态变化防御：§G+3.00%§! \n £population_texticon  每月人口增长：§R-2.00%§! \n\n"
+ BSH_tatarin_nati13_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£political_power_texticon 政治点数获取：§G+3.00%§! \n\n"
+ BSH_tatarin_nati14_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£political_power_texticon 政治点数获取：§G+2.00%§! \n£consumer_goods_texticon 税收成本：§R-7.00%§!\n\n"
+ BSH_tatarin_nati15_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£war_support_modifiericons_texticon 战争支持度：§G+3.00%§!\n\n"
+ BSH_tatarin_nati16_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n £manpower_texticon 适役人口：§G+10.00%§! \n £attack_texticon 部队攻击：§G+3.00%§! \n £defence_texticon 部队防御：§G+3.00%§!  \n\n"
+ BSH_tatarin_nati17_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+10.00%§! \n £personnel_cost_multiplier_modifier_texticon §Y军队开支§!乘数：§R+15.00%§! \n £construction_speed_milfactory_texticon  §Y军工厂§!建设速度：§G+8.00%§!\n\n"
+ BSH_tatarin_nati18_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£army_leader_cost_texticon 陆军指挥官花费：§G-12.00%§! \n £attack_texticon 部队攻击：§G+3.00%§! \n £defence_texticon 部队防御：§G+3.00%§! \n\n"
+ BSH_tatarin_nati19_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+3.00%§!\n\n"
+ BSH_tatarin_nati20_tt: "$BSH_tatarin_nati_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
+ BSH_tatar_kommi_modifier: "共产主义巴什科尔托斯坦的政治"
+ BSH_tatar_kommi_modifier_desc: "巴什科尔托斯坦的共产党政府正在积极努力在宣传和行动上复兴 - 一切都达到了苏联时代的最好水平。"
+ BSH_tatar_kommi_modifier_tt_intro: "§Y$BSH_tatar_kommi_modifier$§!追加效果："
+ BSH_tatar_kommi_start_tt: "添加§Y$BSH_tatar_kommi_modifier$§!，其效果为 £political_power_texticon 政治点数获取: §G+1.00%§!\n\n"
+ BSH_tatar_kommi1_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£political_power_texticon 政治点数获取：§G+2.00%§!\n\n"
+ BSH_tatar_kommi2_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £stability_texticon 稳定度：§R+-9.00%§!\n £drift_defence_texticon 意识形态变化防御：§G+15.00%§! \n\n"
+ BSH_tatar_kommi3_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率 ：§R-0.03%§!\n\n"
+ BSH_tatar_kommi4_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£operatives_detection_texticon 敌方特工被发现几率补正：§G+25.00%§!\n£drift_defence_texticon 意识形态变化防御：§G+5.00%§!\n\n"
+ BSH_tatar_kommi5_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+15.00%§!\n\n"
+ BSH_tatar_kommi6_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+5.00%§!\n\n"
+ BSH_tatar_kommi7_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£stability_texticon 稳定度：§R-7.00%§!\n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n£education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+5.00%§!\n\n"
+ BSH_tatar_kommi8_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
+ BSH_tatar_kommi9_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
+ BSH_tatar_kommi10_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £efficiency_growth_texticon 生产效率增长：§G+10.00%§! \n £construction_speed_texticon 当地建造速度：§G+10.00%§!\n\n"
+ BSH_tatar_kommi11_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £resources_texticon 资源获取效率：§G+5.00%§! \n\n"
+ BSH_tatar_kommi12_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£consumer_goods_texticon 税收成本：§R-2.00%§! \n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n\n"
+ BSH_tatar_kommi13_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£nationalist_outlook_campaign_cost_modifier_texticon 每日民族主义新增支持率：§R-0.03%§!\n\n"
+ BSH_Communism_start: "共产主义的回归"
+ BSH_Communism_start_desc: "共产主义再次回到巴什科尔托斯坦。共产党会再次统治国家吗？"
+ BSH_constituon_BSSR: "巴什科尔托斯坦宪法"
+ BSH_constituon_BSSR_desc: "首先，需要恢复巴什科尔托斯坦宪法。"
+ BSH_arest_silovic: "协助农民"
+ BSH_arest_silovic_desc: "我们将成为国内农民，因为他们养活我们的人民。"
+ BSH_erase_nationalist: "监禁所有民族主义者"
+ BSH_erase_nationalist_desc: "是时候消灭我国的民族主义组织了。"
+ BSH_antigay_propaganda_laws: "反同性恋宣传法"
+ BSH_antigay_propaganda_laws_desc: "是时候在我国合法禁止LGBT人士了"
+ BSH_constituon: "苏维埃宪法"
+ BSH_constituon_desc: "我们将恢复苏联时期的宪法，但会进行一些调整。"
+ BSH_clean_soc_net_desc: "我们将清理所有社交网络，我们不会允许敌人宣传的传播。"
+ BSH_pioneria: "先锋队"
+ BSH_pioneria_desc: "年轻人不能闲着，我们要重振先锋。"
+ BSH_Marks_school: "学校里的马克思主义"
+ BSH_Marks_school_desc: "学校课程必然包括马克思主义。"
+ BSH_state_atheism: "国家无神论"
+ BSH_state_atheism_desc: "宗教是人民的鸦片，是时候打击宗教了。"
+ BSH_collectivism: "集体主义"
+ BSH_collectivism_desc: "集体化已经发挥过一次作用，所以我们将重复过去的经验。"
+ BSH_mobilize_the_masses: "动员民众"
+ BSH_mobilize_the_masses_desc: "党要求的地方，我军就需要人民去保卫国家利益。"
+ BSH_nationalisation_production: "国有化生产"
+ BSH_nationalisation_production_desc: "生产国有化将有助于我们的经济变得更强。"
+ BSH_the_culture_of_proletarianism: "无产阶级文化"
+ BSH_the_culture_of_proletarianism_desc: "是时候为工人阶级种植无产阶级文化了，在这种文化的帮助下，我们将共同走向共同的、美好的共产主义未来。"
+ BSH_fight_international_capitalists: "打击国际资本主义"
+ BSH_fight_international_capitalists_desc: "寡头是一个危险而腐败的阶级，并不比苏联时代的富农好多少。自苏联解体以来，俄罗斯寡头吞噬了越来越多的经济影响力，迫使俄罗斯工人失业，转而支持由外国公司推动的全球经济模式。要复兴俄罗斯，首先要驱逐国际资产阶级。"
+ BSH_better_roads: "一般道路改善"
+ BSH_better_roads_desc: "必须认真对待我国的道路问题。"
+ BSH_soviet_academy_of_sciences: "革命教育"
+ BSH_soviet_academy_of_sciences_desc: "我们必须在课堂上强化革命理想，让学生们不要忘记几十年来许多人为实现的目标而献出生命。"
+ BSH_weaken_the_banks: "削弱银行"
+ BSH_weaken_the_banks_desc: "银行是资本主义的近卫军，扛着资本主义的旗帜投入战斗，用它们的存在来捍卫其利润。他们干涉世界贫困地区，通过工资倾销和利息投机来虐待工人阶级，并通过合法和非法捐款影响政治。银行必须恢复到纯粹是非政治性的短期放债人的状态。"
+ BSH_support_of_the_worker: "支持工人"
+ BSH_support_of_the_worker_desc: "工人阶级是我们的依靠和力量，我们将永远支持他们反对资本主义蔓延！"
+ BSH_power_to_the_workers: "投资工人阶级"
+ BSH_power_to_the_workers_desc: "我们将重点关注工人阶级，他们将是我们经济增长的引擎。"
+ BSH_ultimate_tax_reform: "重大税制改革"
+ BSH_ultimate_tax_reform_desc: "我们打算进行重大税制改革，这会减轻老百姓的税负，但对企业来说却相反。"
+ BSH_single_party: "一党"
+ BSH_single_party_desc: "巴什科尔托斯坦共产党最了解与国家有关的所有领域。如果其他人不妨碍我们，我们就可以致力于建设一个真正的共产主义乌托邦，而这一次，我们将会成功。"
+ BSH_nationalize_foreign_business: "外国企业国有化"
+ BSH_nationalize_foreign_business_desc: "外资工厂对于我国来说始终危害着我们的经济安全。在外国以经济制裁威胁我们的情况下，这些工厂主连夜搬离并顺带带走了许多重点工业，这对我们始终是一种威胁。为了防止这种情况愈演愈烈，我们需要为国家争取这些工业——即使这会得罪其他国家。"
+ BSH_five_year_plan: "第一个五年计划"
+ BSH_five_year_plan_desc: "西方国家的自由经济模式对于社会主义国家来说是没有未来的。回归计划经济，最好以经典的苏联式五年计划的形式，将使政府对以前不受控制的经济产生不受限制的影响。"
+ BSH_authoritarian_control_over_economy: "威权主义对经济的控制"
+ BSH_authoritarian_control_over_economy_desc: "我们国家的经济领域曾任凭机遇，但现在我们将把它重新置于强有力的领导人的控制之下。"
+ BSH_create_patrioitc_schools: "创建爱国学校"
+ BSH_create_patrioitc_schools_desc: "爱国主义学校将帮助我们增加对青少年的影响，并保持共产党的执政。"
+ BSH_the_peoples_militias: "人民民兵"
+ BSH_the_peoples_militias_desc: "为人民组建资金充足的民兵可以确保军队在任何冲突中获得足够的支持。"
+ BSH_reestablish_the_military_industrial_complex: "重建军工复合体"
+ BSH_reestablish_the_military_industrial_complex_desc: "军民一体！"
+ BSH_red_army: "巴什基尔红军"
+ BSH_red_army_desc: "我们将创建我们自己的红军，带领我们投入战斗，捍卫社会主义的成就和成功。"
+ BSH_full_social_support: "卫生政策的后果"
+ BSH_industry: "工业发展"
+ BSH_agro: "农业复合体的发展"
+ BSH_new_workplace: "新工作场所"
+ BSH_control_economic_idea: "受控经济"
+ BSH_clean_soc_net: "清理社交网络"
+ BSH_fight_burecraci: "打击官僚主义"
+ BSH_military_state_idea: "共和国军事化"
+ BSH_soc_medical: "巴什科尔托斯坦社会政策"
+ BSH_soc_medical1: "巴什科尔托斯坦社会政策"
+ BSH_anti_lgbtqa_stance: "反LGBT政策"
+ BSH_highways_repairing: "修复道路"
+ BSH_ter_orobona: "领土防御"
+ BSH_inet: "巴什基尔互联网"
+ BSH_anti_corruption: "反腐败政策"
+ BSH_new_roads: "新道路"
