Small change of China

--- a/localisation/simp_chinese/MD_influence_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_influence_l_simp_chinese.yml
@@ -126,4 +126,4 @@
  auto_influence_nation_7_tt: "[?var:ROOT.auto_influence_array^7.GetNameWithFlag]\n"
  auto_influence_nation_8_tt: "[?var:ROOT.auto_influence_array^8.GetNameWithFlag]\n"
  auto_influence_nation_9_tt: "[?var:ROOT.auto_influence_array^9.GetNameWithFlag]\n"
- recruit_difficulty_tt: "禁用月度§Y国内自主§!机制"
+ recruit_difficulty_tt: "禁用月度§Y国家独立性§!机制"
