--- a/localisation/simp_chinese/events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/events_l_simp_chinese.yml
@@ -525,7 +525,7 @@
  News_influence.0.b: "拒绝援助"
  influence.3.t: "对目标[FROM.GetName]实行影响？"
  influence.3.d: "我们应该针对哪个[FROM.GetNameWithFlag]影响者或是影响其国内独立性？"
- influence.3.a: "目标[FROM.GetNameWithFlag]在影响下的独立性"
+ influence.3.a: "目标[FROM.GetNameWithFlag]在影响下的国家独立性"
  influence.3.b: "目标[?var:FROM.influence_array^0.GetNameWithFlag]"
  influence.3.c: "目标[?var:FROM.influence_array^1.GetNameWithFlag]"
  influence.3.e: "目标[?var:FROM.influence_array^2.GetNameWithFlag]"
