--- a/Changelog.txt
+++ b/Changelog.txt
@@ -65,6 +65,7 @@ v1.10.0
   - Added attack helicopter category to land unit special forces recon doctrine
   - Prevent North Korea from going down the nuclear focus tree unless certain conditions are met
   - Fixed being able to get income from expenses
+  - Removed Finnish unique names from Japanese CV fighters.
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
