--- a/Changelog.txt
+++ b/Changelog.txt
@@ -157,6 +157,7 @@ v1.10.0
   - Revamp Quebec and Greenland
   - Revamp Western Africa
   - Revamp Japan
+  - Revamp Nederland
   - Revamp Greenland
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
