--- a/localisation/english/MD_focus_CHE_l_english.yml
+++ b/localisation/english/MD_focus_CHE_l_english.yml
@@ -43,6 +43,8 @@
  CHE_battalion_vostok_desc: "Special purpose battalion (spetsnaz) of the GRU as part of the 291st Guards Motorized Rifle Regiment of the 42nd Guards Motorized Rifle Division, formed mainly from Chechens"
  CHE_cult_ramzan: "The Cult of Ramzan Kadyrov"
  CHE_cult_ramzan_desc: "Our President should not just be a person holding his position, he should be a symbol of the republic!"
+ CHE_adam_kadyrov: "Promote Our Son"
+ CHE_adam_kadyrov_desc: "Our Son, Adam, will become the head of the security service, and we will also present him with certain awards for his services"
  CHE_electro_pult: ""Electropult" Plant""
  CHE_electro_pult_desc: "Cooperation with the St. Petersburg enterprise allowed us to open production on the territory of our republic"
  CHE_russian_university_spetsnaz: "Found the Russian University of Special Forces"
