--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -26,29 +26,118 @@
  MLW_AIO_view_MZUZU_button_TEXT: "Mzuzu Motors"
  MLW_AIO_MZUZU_sales_menu_TITLE_TEXT: "§WMzuzu Motors Sales§!"
 
+ MLW_AIO_MZUZU_home_market_select_button_TEXT: "Select Market"
+
+ MLW_AIO_MZUZU_home_market_sales_title_TEXT: "Current Sales:"
+
+ MLW_AIO_MZUZU_home_market_income_title_TEXT: "Current Income:"
+ MLW_AIO_MZUZU_home_market_income_AMOUNT_TT: ""
+ MLW_AIO_MZUZU_home_market_income_AMOUNT_TT_delayed: ""
+
+
+ MLW_AIO_MZUZU_market_sales_title_TEXT: "Current Sales:"
+ MLW_AIO_MZUZU_market_income_title_TEXT: "Current Income:"
+
+
+
+ MLW_AIO_MZUZU_continental_market_phase_1_button_TEXT: "Phase 1"
+ MLW_AIO_MZUZU_continental_market_phase_1_button_TT: "[!MLW_AIO_MZUZU_continental_market_phase_1_button_click]"
+ MLW_AIO_MZUZU_continental_market_phase_1_button_TT_delayed: ""
+ MLW_MZUZU_motors_phase_1_TT: "Begin §YPhase 1§! of §YMzuzu Motors§!' Continental Takeover"
+
+ MLW_AIO_MZUZU_continental_market_phase_2_button_TEXT: "Phase 2"
+ MLW_AIO_MZUZU_continental_market_phase_2_button_TT: "[!MLW_AIO_MZUZU_continental_market_phase_2_button_click]"
+ MLW_AIO_MZUZU_continental_market_phase_2_button_TT_delayed: ""
+ MLW_MZUZU_motors_phase_2_TT: "Begin §YPhase 2§! of §YMzuzu Motors§!' Continental Takeover"
+
+ MLW_AIO_MZUZU_continental_market_phase_3_button_TEXT: "Phase 3"
+ MLW_AIO_MZUZU_continental_market_phase_3_button_TT: "[!MLW_AIO_MZUZU_continental_market_phase_3_button_click]"
+ MLW_AIO_MZUZU_continental_market_phase_3_button_TT_delayed: ""
+ MLW_MZUZU_motors_phase_3_TT: "Begin §YPhase 3§! of §YMzuzu Motors§!' Continental Takeover"
+
+ MLW_AIO_MZUZU_continental_market_phase_4_button_TEXT: "Phase 4"
+ MLW_AIO_MZUZU_continental_market_phase_4_button_TT: "[!MLW_AIO_MZUZU_continental_market_phase_4_button_click]"
+ MLW_AIO_MZUZU_continental_market_phase_4_button_TT_delayed: ""
+ MLW_MZUZU_motors_phase_4_TT: "Begin §YPhase 4§! of §YMzuzu Motors§!' Continental Takeover"
+
+ MLW_AIO_MZUZU_continental_market_phase_5_button_TEXT: "Phase 5"
+ MLW_AIO_MZUZU_continental_market_phase_5_button_TT: "[!MLW_AIO_MZUZU_continental_market_phase_5_button_click]"
+ MLW_AIO_MZUZU_continental_market_phase_5_button_TT_delayed: ""
+ MLW_MZUZU_motors_phase_5_TT: "Begin §YPhase 5§! of §YMzuzu Motors§!' Continental Takeover"
+
+
+
+
+
+
+
+
+
+ MLW_MZ_home_market_target_effect_TT: "Set §YMarket Target§! to §Y[ROOT.GetNameWithFlag]§!"
+ MLW_MZUZU_market_target_effect_TT: "Set §YMarket Target§! to §Y[THIS.GetNameWithFlag]§!"
+
+ MLW_AIO_MZUZU_factories_TITLE_TEXT: "Total Factories Assigned:"
+ MLW_AIO_MZUZU_factories_AMOUNT_TEXT: "[?ROOT.MLW_MZUZU_DM_factory_use|Y0]/[?ROOT.num_of_civilian_factories|Y0]"
+ MLW_AIO_MZUZU_factories_AMOUNT_TT: "Can only assign a maximum of [?ROOT.num_of_civilian_factories_available_for_projects|Y0] factories"
+ MLW_AIO_MZUZU_factories_AMOUNT_TT_delayed: "Lowering §YCorporate Tax§! or freeing up factories in use for other projects will mean more factories available for §YMzuzu Motors§!.\n\nMore factories assigned to §YMzuzu Motors§! means more units for export."
+
+ MLW_AIO_MZUZU_decrease_factory_assign_button_TT: "Decrease §YFactories Assigned§!"
+ MLW_AIO_MZUZU_decrease_factory_assign_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_AIO_MZUZU_decrease_factory_assign_button_click_enabled]\n§YEffect:§!\n£click_left  :[!MLW_AIO_MZUZU_decrease_factory_assign_button_click]\n£key_shift  + £click_left  :[!MLW_AIO_MZUZU_decrease_factory_assign_button_shift_click]\n£key_ctrl  + £click_left  :[!MLW_AIO_MZUZU_decrease_factory_assign_button_control_click]"
+
+ MLW_AIO_MZUZU_increase_factory_assign_button_TT: "Increase §YFactories Assigned§!"
+ MLW_AIO_MZUZU_increase_factory_assign_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_AIO_MZUZU_increase_factory_assign_button_click_enabled]\n§YEffect:§!\n£click_left  :[!MLW_AIO_MZUZU_increase_factory_assign_button_click]\n£key_shift  + £click_left  :[!MLW_AIO_MZUZU_increase_factory_assign_button_shift_click]\n£key_ctrl  + £click_left  :[!MLW_AIO_MZUZU_increase_factory_assign_button_control_click]"
+
+
+
+
+ MLW_AIO_MZUZU_clicker_select_orders_TITLE_TEXT: "Orders for §Y[?ROOT.MLW_MZ_tag_selected.GetNameDef]§!:"
+ MLW_AIO_MZUZU_clicker_select_orders_AMOUNT_TEXT: "[?ROOT.MLW_MZUZU_sales_stored|+0]"
+
+
+ MLW_AIO_MZUZU_production_TITLE_TEXT: "Current Weekly Production:"
+ MLW_AIO_MZUZU_production_AMOUNT_TEXT: "[?MLW_MZ_weekly_production|+0] Units"
+
+ MLW_AIO_MZUZU_exports_TITLE_TEXT: "Current Weekly Exports:"
+ MLW_AIO_MZUZU_exports_AMOUNT_TEXT: "[?MLW_MZ_total_exports|+0] Units"
+
+ MLW_AIO_MZUZU_income_TITLE_TEXT: "Current Weekly Income:"
+ MLW_AIO_MZUZU_income_AMOUNT_TEXT: "$[?MLW_MZ_total_income|+2]"
+
+
+
+ MLW_AIO_MZUZU_stockpile_TITLE_TEXT: "Units in Stockpile:"
+ MLW_AIO_MZUZU_stockpile_AMOUNT_TEXT: "[?MLW_MZ_stockpile|Y0]"
+ MLW_AIO_MZUZU_stockpile_AMOUNT_TT: "Changes to Stockpile per Country:"
+ MLW_AIO_MZUZU_stockpile_AMOUNT_TT_delayed: "WIP"
+
+ MLW_AIO_MZUZU_clicker_select_TITLE_TEXT: "[?ROOT.MLW_MZ_tag_selected.GetName]"
+
+ MLW_AIO_MZUZU_market_select_TT: "Change Market Target"
+ MLW_AIO_MZUZU_home_market_select_button_TT: "[!MLW_AIO_MZUZU_home_market_select_button_click]"
+ MLW_AIO_MZUZU_home_market_select_button_TT_delayed: "Our own market might be finite, but to conquer the continental market, we have to conquer the domestic one first."
 
  MLW_MZUZU_select_market_button_TEXT: "Select Market"
- MLW_MZUZU_select_market_button_TT: "£click_left  to select §Y[THIS.GetNameWithFlag]§! as the target for §YMzuzu Motors§! sales"
+ MLW_MZUZU_select_market_button_TT: "[!MLW_MZUZU_select_market_button_click]"
  MLW_MZUZU_select_market_button_TT_delayed: "With plenty of willing buyers, we should have a healthy market to sell the finest in §Y[ROOT.GetAdjective]§! automotive technology (wheels sold seperately)."
 
 
  MLW_MZUZU_confirm_changes_button_TEXT: "Confirm Orders"
- MLW_MZUZU_confirm_changes_button_TT: "Sales in §Y[?ROOT.MZ_tag_selected.GetNameWithFlag]§! will change by [?ROOT.MLW_MZUZU_sales_stored|+0] weekly. (Current weekly sales in §Y[?ROOT.MZ_tag_selected.GetNameWithFlag]§!: [?ROOT.MZ_tag_selected.MLW_MZUZU_sales|Y0])"
+ MLW_MZUZU_confirm_changes_button_TT: "Sales in §Y[?ROOT.MLW_MZ_tag_selected.GetNameWithFlag]§! will change by [?ROOT.MLW_MZUZU_sales_stored|+0] weekly. (Current weekly sales in §Y[?ROOT.MLW_MZ_tag_selected.GetNameWithFlag]§!: [?ROOT.MLW_MZ_tag_selected.MLW_MZUZU_sales|Y0])"
 
 
 
 
- MLW_MZUZU_decrease_sales_button_TT: "§RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]"
+ MLW_MZUZU_decrease_sales_button_TT: "§RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MLW_MZ_tag_selected.GetNameWithFlag|Y0]"
  MLW_MZUZU_decrease_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_decrease_sales_button_click_enabled]\n§YEffect:§!\n£click_left  :\n[!MLW_MZUZU_decrease_sales_button_click]\n£key_shift  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_shift_click]\n£key_ctrl  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_control_click]\n£key_alt  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_alt_click]"
 
- MLW_MZUZU_increase_sales_button_TT: "§GIncrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]"
+ MLW_MZUZU_increase_sales_button_TT: "§GIncrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MLW_MZ_tag_selected.GetNameWithFlag|Y0]"
  MLW_MZUZU_increase_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_increase_sales_button_click_enabled]\n§YEffect:§!\n£click_left  :\n[!MLW_MZUZU_increase_sales_button_click]\n£key_shift  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_shift_click]\n£key_ctrl  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_control_click]\n£key_alt  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_alt_click]"
 
 
 
- MLW_MZUZU_market_change_order_quantity_TT: "Orders of §YMzuzu Vehicles§! changes by [?MLW_MZ_sales_change|+0] (Current planned orders to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]: [?ROOT.MLW_MZUZU_sales_stored|Y0])"
+ MLW_MZUZU_market_change_order_quantity_TT: "Orders of §YMzuzu Vehicles§! changes by [?MLW_MZ_sales_change|+0] (Current planned orders to [?ROOT.MLW_MZ_tag_selected.GetNameWithFlag|Y0]: [?ROOT.MLW_MZUZU_sales_stored|Y0])"
 
-
+ MLW_MZ_assign_factory_TT: "Changes §YFactories Assigned§! by [?MLW_MZUZU_factory_change|+0] (Current §YFactories Assigned§!: [?MLW_MZUZU_DM_factory_use|Y0])"
 
 
 
@@ -62,7 +151,7 @@
 
 
 
- #  to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y10§!\n\n to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y100§!
+ #  to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MLW_MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y10§!\n\n to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MLW_MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y100§!
 
 
 
