--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -806,6 +806,7 @@
  CRM_zone: "Free Economic Zone"
  CRM_naval: "Crimean Shipbuilding Enterprises"
  CRM_tourism_idea: "Crimean Tourism"
+ CRM_poklonskaya_idea: "Nyash-Myash Prosecutor"
  CRM_selhoz_idea: "Agricultural Policy"
  CRM_samoborona_idea: "Crimean Self-Defense"
  CRM_samoborona_idea1: "People's Militia of Crimea"
@@ -822,6 +823,8 @@
  CRM_Pro_russ_desc: "We returned to Russia, our native harbor, our native home, hooray!"
  CRM_economic_zone: "Special Economic Zone"
  CRM_economic_zone_desc: "Russia is ready to make a special economic zone out of our region, which will give us economic growth in the future"
+ CRM_anti_corrupt: "Anti-Corruption Fight"
+ CRM_anti_corrupt_desc: "Our new prosecutor is ready to lead the fight against corruption in all instances"
  CRM_promka: "Industrial Revival"
  CRM_promka_desc: "Our industry has been in ruins since the 90s, it's time to return it to its former greatness"
  CRM_ros_banks: "Russian Banks"
@@ -834,6 +837,8 @@
  CRM_tourism_desc: "Traffic flow will increase threefold, because it is now easier for tourists from Russia to get to us"
  CRM_cipgro: "Digitalization"
  CRM_cipgro_desc: "Our technical infrastructure is very outdated, we will introduce new technologies into circulation"
+ CRM_close_medjlis: "Ban the Crimean Tatar Mejlis"
+ CRM_close_medjlis_desc: "The Mejlis of the Crimean Tatars is actively sabotaging our activities in Crimea, we will ban their activities in our region"
  CRM_energy: "Energy Security"
  CRM_energy_desc: "Our dependence on the continent was very strong, but now we will strive for energy independence"
  CRM_selhoz: "Investments In The Agroindustry"
