--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -466,7 +466,7 @@
  mali.15.a: "A Great Day for Peace"
 
  mali.16.t: "The MNA is Formed"
- mali.16.d: "The National Movement for the Liberation of Azawad (MNA) has been formed in Kidal. The movement claims to be a movement for all people of Azawad. The tribes of Songhai, Arab, Fula and Tuareg assume what they refer to between their statement. The MNA is now stating they are working for independence here in the country for the northeastern part of the country. The leadership of the MNA also claims that they reject violence but calls for displays of solidarity from all Azawadians inside of Mali and beyond the country's borders."
+ mali.16.d: "The National Movement of Azawad (MNA) has been formed in Kidal. The movement claims to be a movement for all people of Azawad. The tribes of Songhai, Arab, Fula and Tuareg assume what they refer to between their statement. The MNA is now stating they are working for independence here in the country for the northeastern part of the country. The leadership of the MNA also claims that they reject violence but calls for displays of solidarity from all Azawadians inside of Mali and beyond the country's borders."
  mali.16.a: "Just Another Tuareg Party"
 
  mali.17.t: "New Security, Economic, and Development Programmes in Kidal"
