--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -44,7 +44,7 @@
  STATE_43: "Bayern"
  STATE_44: "Sachsen"
  STATE_45: "Berlin"
- STATE_46: "Holland"
+ STATE_46: "West-Nederland"
  STATE_47: "Zuid-Nederland"
  STATE_48: "Oost-Nederland"
  STATE_49: "Curacao"
@@ -1167,3 +1167,4 @@
  STATE_1166: "Kayes"
  STATE_1167: "Ansongo"
  STATE_1168: "South Kuril Islands"
+ STATE_1169: "Noord-Nederland"
